--- a/01-desarrollo-front-end/curso/estilos/estilo-general.css
+++ b/01-desarrollo-front-end/curso/estilos/estilo-general.css
@@ -1,3 +1,7 @@
+
+@import url('variables.css') 
+/* para importar estilos de otros archivos */ 
+
 /* -------------------------------------------- */
 /*                    GENERAL                   */
 /* -------------------------------------------- */
