--- a/01-desarrollo-front-end/curso/estilos/estilo-general.css
+++ b/01-desarrollo-front-end/curso/estilos/estilo-general.css
@@ -1,8 +1,12 @@
-@import url('variables.css') /* para importar estilos de otros archivos */
-    /* -------------------------------------------- */
-    /*                    GENERAL                   */
-    /* -------------------------------------------- */ html,
-  body {
+/* para importar estilos de otros archivos */
+@import url('variables.css'); 
+@import url('listas.css');
+@IMPORT URL('colores.css');
+/* -------------------------------------------- */
+/*                    GENERAL                   */
+/* -------------------------------------------- */
+html,
+body {
   width: 100%;
   height: 100%;
   margin: 0;
