--- a/desafios/peliculas/styles.css
+++ b/desafios/peliculas/styles.css
@@ -18,6 +18,7 @@
   --systemQuaternary-onDark: rgba(255, 255, 255, 0.1);
   --cardBackgroundColor: var(--systemQuaternary-onDark);
   --keyColor: #0a84ff;
+  --btn-background: rgba(255,255,255,0.4);
 }
 
 body {
@@ -269,7 +270,7 @@ h1 {
 *******************************/
 .cast-crew {
   max-width: 1680px;
-  padding-top: 16px;
+  padding-top: 260px;
   margin: 100px auto 50px;
 }
 
@@ -291,45 +292,54 @@ h1 {
 }
 
 .cast-crew-slider {
-  margin-top: calc(15px * -1);
-  margin-bottom: calc(15px * -1);
-  margin-right: calc(15px * -1);
-  margin-left: calc(15px * -1);
-  padding: 15px;
-  width: 100%;
   overflow: hidden;
-  box-sizing: content-box;
+  position: relative;
+  width: 90%;
+  margin: 0px auto;
 }
 
 .cast-list {
-  margin: -20px -12px;
-  padding: 20px 12px;
-  mask: linear-gradient(
-    90deg,
-    transparent 0,
-    #000 12px,
-    #000 calc(100% - 12px),
-    transparent 100%
-  );
-  -webkit-mask: linear-gradient(
-    90deg,
-    transparent 0,
-    #000 12px,
-    #000 calc(100% - 12px),
-    transparent 100%
-  );
-  scroll-padding-left: 12px;
-  scroll-padding-right: 12px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
   display: flex;
-  gap: 12px;
+  transition: transform 0.3s;
 }
 
 /* Cast List Item */
 .cast-list-item {
-  min-width: 180px;
-  max-width: 190px;
-  list-style-type: none;
+  flex: 0 0 240px; 
+  height: 240px; 
+  text-align: center;
+  margin: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+#prevBtn, #nextBtn {
+  position: absolute;
+  top: 190px;
+  cursor: pointer;
+  padding: 12px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  background: var(--btn-background);
+  border: none;
+  color: white;
+}
+
+#prevBtn {
+ left: 10px;
+}
+
+#nextBtn {
+  right: 10px;
+}
+
 
 .cast-list-item a {
   text-decoration: none;
@@ -343,7 +353,7 @@ h1 {
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
-  width: 100%;
+  width: 70%;
 }
 
 /* Cast List Item - Names */
@@ -360,6 +370,7 @@ h1 {
   line-height: 1.34;
   text-align: center;
 }
+
 /********************************
 ************** ABOUT *************
 ********************************/
