--- a/desafios/peliculas/styles.css
+++ b/desafios/peliculas/styles.css
@@ -1,11 +1,11 @@
-/* Reset */
+/************************ Reset *************************/
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* Personal colors */
+/******************* Personal colors ******************/
 :root {
   --appPrimaryBackgroundColor: #2d2d2d;
   --appSecondaryBackgroundColor: rgba(0, 0, 0, 0.3);
@@ -30,7 +30,7 @@ body {
   letter-spacing: 0;
 }
 
-/* HEADER */
+/****************** HEADER *******************/
 header {
   position: sticky;
   width: 100%;
@@ -54,11 +54,11 @@ h1 {
   line-height: 1.23;
 }
 
-/******** MAIN ***********/
+/********************** MAIN ******************/
 
-/****************
-*****  HERO *****
-*****************/
+/*********************************************
+********************  HERO *******************
+*********************************************/
 .hero {
   width: 100%;
   height: calc(111vw / 0.65);
@@ -97,6 +97,7 @@ h1 {
   max-width: 900px;
   margin: 0 auto;
 }
+
 .blur .header {
   display: flex;
   align-items: center;
@@ -265,12 +266,12 @@ h1 {
   -o-border-radius: 7px;
 }
 
-/*******************************
-******* CAST & CREW ************
-*******************************/
+/****************************************************
+******************* CAST & CREW *********************
+****************************************************/
 .cast-crew {
   max-width: 1680px;
-  padding-top: 260px;
+  padding-top: 100px;
   margin: 100px auto 50px;
 }
 
@@ -319,7 +320,7 @@ h1 {
 
 #prevBtn, #nextBtn {
   position: absolute;
-  top: 190px;
+  top: 160px;
   cursor: pointer;
   padding: 12px;
   border-radius: 50%;
@@ -339,7 +340,6 @@ h1 {
 #nextBtn {
   right: 10px;
 }
-
 
 .cast-list-item a {
   text-decoration: none;
@@ -371,12 +371,18 @@ h1 {
   text-align: center;
 }
 
-/********************************
-************** ABOUT *************
-********************************/
+/************************************************
+********************** ABOUT *********************
+************************************************/
 .about {
-  padding: 48px 40px 20px;
   background-color: var(--appSecondaryBackgroundColor);
+}
+
+.about-container {
+  max-width: 1680px;
+  padding-top: 260px;
+  margin: 100px auto 0px;
+  padding: 48px 40px 20px;
 }
 
 .boxes {
@@ -457,25 +463,34 @@ h1 {
   color: gray;
   margin-top: 32px;
 }
-/********************************
-**** INFO, LANG, ACC   **********
-*********************************/
+
+/************************************************
+************ INFO, LANG, ACC   ******************
+*************************************************/
 .info-lang-acc {
-  padding: 48px 40px 20px;
+  padding: 10px 40px 20px;
   background-color: var(--appSecondaryBackgroundColor);
-  display: flex;
   gap: 24px;
 }
 
+.info-lang-acc-container {
+  max-width: 1680px;
+  margin: 10px auto 0px;
+  padding: 20px 40px 20px;
+  display: flex;
+  gap: 18px;
+}
+
+
 @media screen and (max-width: 768px) {
-  .info-lang-acc {
+  .info-lang-acc-container {
     flex-direction: column;
     flex-wrap: wrap;
   }
 }
 
 @media screen and (min-width: 769px) {
-  .info-lang-acc {
+  .info-lang-acc-container {
     flex-direction: row;
   }
 }
@@ -548,7 +563,7 @@ h1 {
 .modal-content {
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 40%;
   transform: translate(-50%, -50%);
   padding: 20px;
   background-color: var(--appModalBackgroundColor);
@@ -572,8 +587,8 @@ h1 {
 }
 
 .close {
-  width: 28px;
-  height: 28px;
+  width: 38px;
+  height: 38px;
   background-color: transparent;
   border: 0;
   position: absolute;
@@ -585,6 +600,11 @@ h1 {
   justify-content: center;
   color: gray;
   font-weight: 800;
+}
+
+.modal-x {
+  font-weight: 600;
+  font-size: 28px;
 }
 
 .modal-content-container {
@@ -621,4 +641,66 @@ h1 {
   font-size: 0.75rem;
   font-weight: 400;
 }
-/* FOOTER */
+
+/*****************************************
+**************** FOOTER ******************
+*****************************************/
+.global-footer {
+  max-width: 1680px;
+    margin: 0 auto;
+    padding: 20px 25px;
+    display: flex;
+    gap: 20px;
+    flex-direction: row-reverse;
+    flex-wrap: nowrap;
+    align-content: flex-start;
+    align-items: flex-start;
+    padding: 12px 40px;
+    font-weight: 400;
+    font-size: 1.1rem;
+    line-height: 1.19;
+    justify-content: space-between;
+}
+
+@media screen and (max-width: 768px) {
+  .global-footer {
+    flex-direction: column;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  }
+}
+
+.global-footer-right-txt {
+  line-height: 1;
+  display: inline-flex;
+  margin-top: 6px;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+
+.global-footer-country {
+  color: var(--systemPrimary);
+  font-weight: 600;
+}
+
+.global-footer-language {
+  color: var(--systemSecondary);
+  padding-left: 8px;
+}
+
+.secondary-txt {
+  color: var(--systemSecondary);
+}
+
+.legal-links {
+  padding: 12px 0px;
+  color: var(--systemSecondary);
+  line-height: 1.6;
+}
+
+.legal-links a {
+  text-decoration: none;
+  color: var(--systemPrimary);
+  font-weight: 600;
+  margin-right: 12px;
+}
